--- a/Для перевірка.css
+++ b/Для перевірка.css
@@ -118,37 +118,7 @@ header {
 b, strong {
 	font-family: "FiraSans-Bold";
 }
-/*::-webkit-scrollbar-button {
-background-image:url('');
-background-repeat:no-repeat;
-width:5px;
-height:0px
-}
 
-::-webkit-scrollbar-track {
-background-color: rgb(225, 0, 16);
-}
-
-::-webkit-scrollbar-thumb {
--webkit-border-radius: 0px;
-border-radius: 0px;
-background-color:rgb(225, 0, 16);
-}
-
-::-webkit-scrollbar-thumb:hover{
-background-color:rgb(225, 0, 16);
-}
-
-::-webkit-resizer{
-background-image:url('');
-background-repeat:no-repeat;
-width:4px;
-height:0px
-}
-
-::-webkit-scrollbar{
-width: 4px;
-}*/
 .row-flex {
     display: flex;
     flex-wrap: wrap;
@@ -526,18 +496,24 @@ width: 4px;
 	clear: both;
 	content: " ";
 }
+.search-form {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 .search-form-input,
 .search-form-btn {
-	position: relative;
-	height: 100%;
-	display: inline-block;
-	vertical-align: top;
-	margin-bottom: 0;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	float: right;
-	box-sizing: border-box;
+    position: relative;
+    height: 100%;
+    vertical-align: top;
+    margin-bottom: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    box-sizing: border-box;
 }
+
+
 input.search-form-input {
 	position: absolute;
 	right: 69px;
@@ -842,11 +818,16 @@ input.subscribe-input::placeholder { color: #000; }
 	clear: both;
 	content: " ";
 }
-.news-nav {
-	display: inline-block;
-	vertical-align: middle;
-	float: right;
+.parent-container { /* контейнер, що містить .news-nav */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
+
+.news-nav {
+    vertical-align: middle;
+}
+
 .news-nav-border {
 	position: absolute;
 	bottom: 4px;
